<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.mycompany</groupId>
	<artifactId>EsferoidesJ</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>jar</packaging>
	<repositories>
		<repository>
			<id>central</id>
			<name>Central Repository</name>
			<url>https://repo.maven.apache.org/maven2</url>
		</repository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</repository>
		<repository>
			<id>unidata.releases</id>
			<url>https://artifacts.unidata.ucar.edu/content/repositories/unidata-releases</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>ome</id>
			<name>OME Artifactory</name>
			<url>https://artifacts.openmicroscopy.org/artifactory/maven/</url>
		</repository>
		<repository>
			<id>imagej</id>
			<name>ImageJ</name>
			<url>http://maven.imagej.net/content/repositories/public/</url>
		</repository>
	</repositories>
	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<bioformats.version>6.0.1</bioformats.version>
		<logback.version>1.1.1</logback.version>

		<!-- NB: Avoid platform encoding warning when copying resources. -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<!-- NB: Specify formatting of the maven.build.timestamp property. -->
		<maven.build.timestamp.format>d MMMMM yyyy</maven.build.timestamp.format>

		<!-- NB: Override argLine property for extra maven-surefire-plugin args. -->
		<argLine />
	</properties>
	<dependencies>

		<dependency>
			<groupId>io.github.joheras</groupId>
			<artifactId>IJ-OpenCV</artifactId>
			<version>1.2.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.github.ijpb</groupId>
			<artifactId>MorphoLibJ</artifactId>
			<version>v1.4.0</version>
		</dependency>

		<dependency>
			<groupId>ome</groupId>
			<artifactId>formats-api</artifactId>
			<version>${bioformats.version}</version>
		</dependency>
		<dependency>
			<groupId>ome</groupId>
			<artifactId>bio-formats</artifactId>
			<version>5.0.0-rc2</version>
		</dependency>
		<dependency>
			<groupId>ome</groupId>
			<artifactId>loci_plugins</artifactId>
			<version>5.0.0-rc2</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-core</artifactId>
			<version>${logback.version}</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${logback.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>3.7</version>
		</dependency>
	</dependencies>
</project>